# wisdomworks

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  docker-compose.test.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vercel.json
.github/workflows/: deploy-services.yml  deploy-web.yml  pr-check.yml
_bmad-output/: test-design-architecture.md  test-design-qa.md
_bmad-output/design-assets/logos/: wisdomworks-tagline-options.html
_bmad-output/implementation-artifacts/: 0-1-monorepo-initialization-and-dev-toolchain.md  0-2-database-foundation-and-core-schema.md  0-3-authentication-and-tenant-isolation.md  0-4-nats-event-system-and-docker-compose.md  0-5-ci-cd-pipeline-and-schema-contract-testing.md  0-6-test-infrastructure-and-data-seeding.md  0-7-model-abstraction-layer.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  cost-projection.md  epic-review-findings.md  epics.md  implementation-readiness-report-2026-04-18.md  prd-validation-report.md  prd.md  product-brief-devon-2026-02-12.md  ux-design-directions.html  ux-design-specification.md
apps/desktop/: package.json
apps/web/: package.json  tsconfig.json
apps/website/: eslint.config.js  package.json
services/agents/: package.json  pyproject.toml
services/agents/src/: __init__.py  ai_client.py
services/agents/src/engine/: __init__.py  agent_runner.py
services/agents/src/schemas/: __init__.py  events.py  export_schemas.py  tenants.py
services/ingestion/: eslint.config.mjs  package.json
services/signal-layer/: package.json
(+21 files in other folders)
