[project]
name = "wisdomworks-agents"
version = "0.1.0"
description = "WisdomWorks AI Agent Orchestration Service"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4.0",
    "anthropic>=0.52.0",
    "openai>=1.86.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py"]
